add iclr poster and code

--- a/index.html
+++ b/index.html
@@ -161,7 +161,18 @@
                 <font color="769fcd"> <i class="fa-solid fa-magnifying-glass"></i> TL;DR: 
                   We unify the training scheme commonly used in COMRL with the general RL objective, filling the gap between intuition and theoretical justification. 
                   We identify the new issue called task representation shift and theoretically demonstrate that by reining in the previously ignored task representation shift, it is possible to achieve monotonic performance improvements.
-                  <br> <a target="_blank" href="https://openreview.net/forum?id=Cr1XlGBGVm&referrer=%5BAuthor%20Console%5D(%2Fgroup%3Fid%3DICLR.cc%2F2025%2FConference%2FAuthors%23your-submissions)">Paper</a> 
+                  <br> <a target="_blank" href="https://openreview.net/forum?id=Cr1XlGBGVm&referrer=%5BAuthor%20Console%5D(%2Fgroup%3Fid%3DICLR.cc%2F2025%2FConference%2FAuthors%23your-submissions)">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="https://github.com/betray12138/Task-Representation-Shift">Code</a>
+                  &nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                  <button class="wechatButton">
+                  <a target="_blank" href="" class="noNavigateLink">Poster</a>
+                  <div class="wechatModal">
+                    <div class="modal-content">
+                        <span class="closeModal" style="cursor: pointer; float: left; font-size: 20px;">&times;</span>
+                        <iframe class="pdfContainer" src="files/RETRO_Poster.pdf#toolbar=0" type="application/pdf" width="1000" height="600" style="border:none;"></iframe>
+                        <div class="errorMessage">Unable to display the PDF. Please try again later.</div>
+                    </div>
+                  </div>
+                  </button>
             </p>
           </div>
         </div>
