--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
           <h1>  <b> Hai </b>  <b> Zhang </b> | <span class="chinese-text"> 张 海 </span></h1>
           <p>
             Hi there!  
-            I'm an incoming PhD student at <a target="_blank" href="https://www.hku.hk/">the University of Hong Kong</a>, jointly supervised by <a target="_blank" href="https://lihongyang.info/">Prof. Hongyang Li</a> and <a target="_blank" href="https://repository.hku.hk/cris/rp/rp02460">Prof. Fu Zhang</a>.
+            I'm an incoming PhD student at <a target="_blank" href="https://www.hku.hk/">The University of Hong Kong</a>, jointly supervised by <a target="_blank" href="https://lihongyang.info/">Prof. Hongyang Li</a> and <a target="_blank" href="https://repository.hku.hk/cris/rp/rp02460">Prof. Fu Zhang</a>.
             Prior to this, I earned both my Master's and Bachelor's degrees in Computer Science and Technology from <a target="_blank" href="https://cs.tongji.edu.cn/index.htm">Tongji University</a>, where I had the privilege of being supervised by <a target="_blank" href="http://cs1.tongji.edu.cn/~junqiao/">Prof. Junqiao Zhao</a>.
             <br>
             My research interests focus on general reinforcement learning and its applications in embodied intelligence, i.e. robotic manipulation, humanoid locomotion 🤖.
             I firmly believe that reinforcement learning holds significant promise as a pivotal pathway toward achieving Artificial General Intelligence.
             <br>
-            Previously, I was fortunate to collaborate with <a target="_blank" href="https://lanqingli1993.github.io/">Prof. Lanqing Li</a> and <a target="_blank" href="https://www.cse.cuhk.edu.hk/~pheng/">Prof. Pheng Ann Heng</a> at the Chinese University of Hong Kong.
+            Previously, I was fortunate to collaborate with <a target="_blank" href="https://lanqingli1993.github.io/">Prof. Lanqing Li</a> and <a target="_blank" href="https://www.cse.cuhk.edu.hk/~pheng/">Prof. Pheng Ann Heng</a> at The Chinese University of Hong Kong.
             Currently, I'm working closely with <a target="_blank" href="https://alvinwen428.github.io/">Dr. Chuan Wen</a> and <a target="_blank" href="https://people.iiis.tsinghua.edu.cn/~gaoyang/yang-gao.weebly.com/index.html">Prof. Yang Gao</a> at Tsinghua University to explore the generalization ability towards general robotic manipulation.
             <br>
             I'm always open to collaborations on reinforcement learning / robotics-related projects! Feel free to reach out —— I'd love to connect!👋. 
@@ -195,9 +195,9 @@
 
         <!-- Publications -->
         <div class="list-item publication" data-category="publication">
-          <a target="_blank" href="https://arxiv.org/abs/2405.12001" class="thumbnail"><img src="images/scrutinize.png" alt="" /></a>
+          <a target="_blank" href="https://openreview.net/forum?id=Cr1XlGBGVm" class="thumbnail"><img src="images/scrutinize.png" alt="" /></a>
           <div class="project-description">
-            <h3><a target="_blank" href="https://arxiv.org/abs/2405.12001">Scrutinize What We Ignore: Reining In Task Representation Shift Of Context-Based Offline Meta Reinforcement Learning</a></h3>
+            <h3><a target="_blank" href="https://openreview.net/forum?id=Cr1XlGBGVm">Scrutinize What We Ignore: Reining In Task Representation Shift Of Context-Based Offline Meta Reinforcement Learning</a></h3>
             <p>
                 <u>Hai Zhang</u>, Boyuan Zheng, Tianying Ji, Jinhang Liu, Anqi Guo, Junqiao Zhao†, Lanqing Li†
                 <br><i>ICLR 2025</i><br>
@@ -206,7 +206,7 @@
                 <font color="769fcd"> <i class="fa-solid fa-magnifying-glass"></i> TL;DR: 
                   We unify the training scheme commonly used in COMRL with the general RL objective, filling the gap between intuition and theoretical justification. 
                   We identify the new issue called task representation shift and theoretically demonstrate that by reining in the previously ignored task representation shift, it is possible to achieve monotonic performance improvements.
-                  <br> <a target="_blank" href="https://openreview.net/forum?id=Cr1XlGBGVm&referrer=%5BAuthor%20Console%5D(%2Fgroup%3Fid%3DICLR.cc%2F2025%2FConference%2FAuthors%23your-submissions)">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="https://github.com/betray12138/Task-Representation-Shift">Code</a>
+                  <br> <a target="_blank" href="https://openreview.net/forum?id=Cr1XlGBGVm">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="https://github.com/betray12138/Task-Representation-Shift">Code</a>
                   &nbsp;&nbsp;&bull;&nbsp;&nbsp;
                   <button class="wechatButton">
                   <a target="_blank" href="" class="noNavigateLink">Poster</a>
@@ -223,9 +223,9 @@
         </div>
 
         <div class="list-item publication" data-category="publication">
-          <a target="_blank" href="https://openreview.net/pdf/69a1646a2cef2d80446dd0c6c12d542d85eb5a31.pdf" class="thumbnail"><img src="images/unicorn.png" alt="" /></a>
+          <a target="_blank" href="https://neurips.cc/virtual/2024/poster/95247" class="thumbnail"><img src="images/unicorn.png" alt="" /></a>
           <div class="project-description">
-            <h3><a target="_blank" href="https://openreview.net/pdf/69a1646a2cef2d80446dd0c6c12d542d85eb5a31.pdf">Towards an Information Theoretic Framework of Context-Based Offline Meta-Reinforcement Learning</a></h3>
+            <h3><a target="_blank" href="https://neurips.cc/virtual/2024/poster/95247">Towards an Information Theoretic Framework of Context-Based Offline Meta-Reinforcement Learning</a></h3>
             <p>
                 Lanqing Li*, <u>Hai Zhang *</u>, Xinyu Zhang, Shatong Zhu, Junqiao Zhao†, Pheng-Ann Heng
                 <br><i>NeurIPS 2024</i><br>
@@ -235,7 +235,7 @@
                   which unifies the mainstream COMRL methods, then leads to a general and state-of-the-art algorithm called UNICORN,
                   exhibiting remarkable generalization across a broad spectrum of RL benchmarks, context shift scenarios, data qualities and deep learning architectures. </font>
                   <!-- <br> <a target="_blank" href="https://openreview.net/pdf?id=QFUsZvw9mx">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="https://github.com/betray12138/UNICORN">Code</a>&nbsp;&nbsp;&nbsp;&bull;&nbsp;  -->
-                  <br> <a target="_blank" href="https://openreview.net/pdf?id=QFUsZvw9mx">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="https://github.com/betray12138/UNICORN">Code</a>
+                  <br> <a target="_blank" href="https://proceedings.neurips.cc/paper_files/paper/2024/hash/8a30aba6514b56d02976f49797f6338a-Abstract-Conference.html">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="https://github.com/betray12138/UNICORN">Code</a>
                   &nbsp;&nbsp;&bull;&nbsp;&nbsp;
                   <button class="wechatButton">
                   <a target="_blank" href="" class="noNavigateLink">Poster</a>
