update full name

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <h3><a target="_blank" href="https://openreview.net/forum?id=Cr1XlGBGVm">Scrutinize What We Ignore: Reining In Task Representation Shift Of Context-Based Offline Meta Reinforcement Learning</a></h3>
             <p>
                 <u>Hai Zhang</u>, Boyuan Zheng, Tianying Ji, Jinhang Liu, Anqi Guo, Junqiao Zhao†, Lanqing Li†
-                <br><i>ICLR 2025</i><br>
+                <br><i>International Conference on Learning Representations (ICLR) 2025</i><br>
                 <font color="49bf9"><i>&#9733;  (Score: 6 6 8 8; top 5%) &#9733;</i></font><br>
               
                 <font color="769fcd"> <i class="fa-solid fa-magnifying-glass"></i> TL;DR: 
@@ -228,7 +228,7 @@
             <h3><a target="_blank" href="https://neurips.cc/virtual/2024/poster/95247">Towards an Information Theoretic Framework of Context-Based Offline Meta-Reinforcement Learning</a></h3>
             <p>
                 Lanqing Li*, <u>Hai Zhang *</u>, Xinyu Zhang, Shatong Zhu, Junqiao Zhao†, Pheng-Ann Heng
-                <br><i>NeurIPS 2024</i><br>
+                <br><i>Annual Conference on Neural Information Processing Systems (NeurIPS) 2024</i><br>
                 <font color="49bf9"><i>&#9733; Spotlight Presentation (Score: 7 7 8; top 1%) &#9733;</i></font><br>
                 <font color="769fcd"> <i class="fa-solid fa-magnifying-glass"></i> 
                   TL;DR: We propose a novel information theoretic framework of the context-based offline meta-RL paradigm, 
@@ -258,7 +258,7 @@
             <h3><a target="_blank" href="https://openreview.net/pdf?id=wz2KvvEk44">Focus On What Matters: Separated Models For Visual-Based RL Generalization</a></h3>
             <p>
               Di Zhang, Bowen Lv, <u>Hai Zhang</u>, Feifan Yang, Junqiao Zhao†, Hang Yu, Chang Huang, Hongtu Zhou, Chen Ye, Changjun Jiang<br>
-              <i>NeurIPS 2024</i><br>
+              <i>Annual Conference on Neural Information Processing Systems (NeurIPS) 2024</i><br>
               <font color="769fcd"> <i class="fa-solid fa-magnifying-glass"></i> 
                 TL;DR: We propose SMG, which utilizes a reconstruction-based auxiliary task to extract task-relevant representations from visual observations 
                 and further strengths the generalization ability of RL agents with the help of two consistency losses.
@@ -286,7 +286,7 @@
             <h3><a target="_blank" href="https://openreview.net/pdf?id=d7a5TpePV7">How to Fine-tune the Model: Unified Model Shift and Model Bias Policy Optimization</a></h3>
             <p>
                 <u>Hai Zhang</u>, Hang Yu, Junqiao Zhao†, Di Zhang, Chang Huang, Hongtu Zhou, Xiao Zhang, Chen Ye
-                <br><i>NeurIPS 2023</i><br>
+                <br><i>Annual Conference on Neural Information Processing Systems (NeurIPS) 2023</i><br>
               
                 <font color="769fcd"> <i class="fa-solid fa-magnifying-glass"></i> TL;DR: 
                   We theoretically derive an optimization objective that can unify model shift and model bias and then formulate a fine-tuning process, 
@@ -313,8 +313,8 @@
             <h3><a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/10319093">Safe Reinforcement Learning with Dead-Ends Avoidance and Recovery</a></h3>
             <p>
                 Xiao Zhang, <u>Hai Zhang</u>, Hongtu Zhou, Chang Huang, Di Zhang, Chen Ye†, Junqiao Zhao†
-                <br><i>IEEE Robotics and Automation Letters</i><br>
-                <font color="49bf9"><i>&#9733; Oral Presentation in ICRA 2024 &#9733;</i></font><br>
+                <br><i>IEEE Robotics and Automation Letters (RA-L)</i><br>
+                <font color="49bf9"><i>&#9733; Oral in IEEE International Conference on Robotics and Automation (ICRA) 2024 &#9733;</i></font><br>
                 <font color="769fcd"> <i class="fa-solid fa-magnifying-glass"></i> TL;DR: 
                   We propose a method to construct a boundary that discriminates between safe and unsafe states. 
                   The boundary we construct is equivalent to distinguishing dead-end states, indicating the maximum extent to which safe exploration is guaranteed, and thus has a minimum limitation on exploration.
