--- a/index.html
+++ b/index.html
@@ -194,22 +194,22 @@
 
 
         <!-- Publications -->
-        <!-- <div class="list-item publication" data-category="publication">
-          <a target="_blank" href="" class="thumbnail"><img src="images/kinedex.png" alt="" /></a>
+        <div class="list-item publication" data-category="publication">
+          <a target="_blank" href="https://dinomini00.github.io/KineDex/" class="thumbnail"><img src="images/kinedex.png" alt="" /></a>
           <div class="project-description">
-            <h3><a target="_blank" href="">KineDex: Learning Tactile-Informed Visuomotor Policies via Kinesthetic Teaching for Dexterous Manipulation</a></h3>
+            <h3><a target="_blank" href="https://dinomini00.github.io/KineDex/">KineDex: Learning Tactile-Informed Visuomotor Policies via Kinesthetic Teaching for Dexterous Manipulation</a></h3>
             <p>
                 Di Zhang, Chengbo Yuan, Chuan Wen, <u>Hai Zhang</u>, Junqiao Zhao, Yang Gao†
                 <br><i>Under Review</i><br>
               
                 <font color="769fcd"> <i class="fa-solid fa-magnifying-glass"></i> TL;DR: 
-                  We propose KineDex, a hand-over-hand kinesthetic teaching paradigm in which the operator’s motion is directly transferred to the dexterous hand, 
+                  We propose KineDex, a hand-over-hand kinesthetic teaching paradigm in which the operator's motion is directly transferred to the dexterous hand, 
                   enabling the collection of physically grounded demonstrations enriched with accurate tactile feedback.
                   KineDex can complete severely challenging tasks such as squeezing toothpaste onto a toothbrush, which require precise multi-finger coordination and stable force regulation.
                   KineDex collects data over twice as fast as teleoperation across two tasks of varying difficulty, while maintaining a near-100% success rate, compared to under 50% for teleoperation.
                   
-                  <br> <a target="_blank" href="">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="">Code</a>
-                  &nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                  <br> <a target="_blank" href="">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="https://github.com/DinoMini00/KineDex_code">Code</a>
+                  <!-- &nbsp;&nbsp;&bull;&nbsp;&nbsp;
                   <button class="wechatButton">
                   <a target="_blank" href="" class="noNavigateLink">Poster</a>
                   <div class="wechatModal">
@@ -219,10 +219,11 @@
                         <div class="errorMessage">Unable to display the PDF. Please try again later.</div>
                     </div>
                   </div>
-                  </button>
+                  </button> -->
+                  &nbsp;&nbsp;&bull;&nbsp;&nbsp;<a target="_blank" href="https://dinomini00.github.io/KineDex/">Website</a>
             </p>
           </div>
-        </div> -->
+        </div>
 
         <div class="list-item publication" data-category="publication">
           <a target="_blank" href="" class="thumbnail"><img src="images/certain.png" alt="" /></a>
