add kinedex paper

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                   KineDex can complete severely challenging tasks such as squeezing toothpaste onto a toothbrush, which require precise multi-finger coordination and stable force regulation.
                   KineDex collects data over twice as fast as teleoperation across two tasks of varying difficulty, while maintaining a near-100% success rate, compared to under 50% for teleoperation.
                   
-                  <br> <a target="_blank" href="">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="https://github.com/DinoMini00/KineDex_code">Code</a>
+                  <br> <a target="_blank" href="https://export.arxiv.org/abs/2505.01974">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="https://github.com/DinoMini00/KineDex_code">Code</a>
                   <!-- &nbsp;&nbsp;&bull;&nbsp;&nbsp;
                   <button class="wechatButton">
                   <a target="_blank" href="" class="noNavigateLink">Poster</a>
