--- a/index.html
+++ b/index.html
@@ -113,9 +113,8 @@
           <h1>  <b> Hai </b>  <b> Zhang </b> | <span class="chinese-text"> 张 海 </span></h1>
           <p>
             Hi there!  
-            <!-- I'm an incoming PhD student at <a target="_blank" href="https://www.hku.hk/">The University of Hong Kong</a>, jointly supervised by <a target="_blank" href="https://lihongyang.info/">Prof. Hongyang Li</a> and <a target="_blank" href="https://repository.hku.hk/cris/rp/rp02460">Prof. Fu Zhang</a>. -->
-            <!-- Prior to this,  -->
-            I earned both my Master's and Bachelor's degrees in Computer Science and Technology from <a target="_blank" href="https://cs.tongji.edu.cn/index.htm">Tongji University</a>, where I had the privilege of being supervised by <a target="_blank" href="http://cs1.tongji.edu.cn/~junqiao/">Prof. Junqiao Zhao</a>.
+            I'm an incoming PhD student at <a target="_blank" href="https://www.hku.hk/">The University of Hong Kong</a>, jointly supervised by <a target="_blank" href="https://lihongyang.info/">Prof. Hongyang Li</a> and <a target="_blank" href="https://repository.hku.hk/cris/rp/rp02460">Prof. Fu Zhang</a>.
+            Prior to this, I earned both my Master's and Bachelor's degrees in Computer Science and Technology from <a target="_blank" href="https://cs.tongji.edu.cn/index.htm">Tongji University</a>, where I had the privilege of being supervised by <a target="_blank" href="http://cs1.tongji.edu.cn/~junqiao/">Prof. Junqiao Zhao</a>.
             <br>
             My research interests focus on general reinforcement learning and its applications in embodied intelligence, i.e. robotic manipulation, humanoid locomotion 🤖.
             I firmly believe that reinforcement learning holds significant promise as a pivotal pathway toward achieving Artificial General Intelligence.
@@ -209,7 +208,7 @@
                   KineDex can complete severely challenging tasks such as squeezing toothpaste onto a toothbrush, which require precise multi-finger coordination and stable force regulation.
                   KineDex collects data over twice as fast as teleoperation across two tasks of varying difficulty, while maintaining a near-100% success rate, compared to under 50% for teleoperation.
                   
-                  <br> <a target="_blank" href="https://export.arxiv.org/abs/2505.01974">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="https://github.com/DinoMini00/KineDex_code">Code</a>
+                  <br> <a target="_blank" href="https://arxiv.org/abs/2505.01974">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="https://github.com/DinoMini00/KineDex_code">Code</a>
                   <!-- &nbsp;&nbsp;&bull;&nbsp;&nbsp;
                   <button class="wechatButton">
                   <a target="_blank" href="" class="noNavigateLink">Poster</a>
