--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
           <h1>  <b> Hai </b>  <b> Zhang </b> | <span class="chinese-text"> 张 海 </span></h1>
           <p>
             Hi there!  
-            I'm an incoming PhD student at <a target="_blank" href="https://mmlab.hk/">The Multimedia Laboratory (MMLab)</a> of <a target="_blank" href="https://www.hku.hk/">The University of Hong Kong</a>, jointly supervised by <a target="_blank" href="https://lihongyang.info/">Prof. Hongyang Li</a> and <a target="_blank" href="https://repository.hku.hk/cris/rp/rp02460">Prof. Fu Zhang</a>.
-            Prior to this, I earned both my Master's and Bachelor's degrees in Computer Science and Technology from <a target="_blank" href="https://cs.tongji.edu.cn/index.htm">Tongji University</a>, where I had the privilege of being supervised by <a target="_blank" href="http://cs1.tongji.edu.cn/~junqiao/">Prof. Junqiao Zhao</a>.
+            <!-- I'm an incoming PhD student at <a target="_blank" href="https://mmlab.hk/">The Multimedia Laboratory (MMLab)</a> of <a target="_blank" href="https://www.hku.hk/">The University of Hong Kong</a>, jointly supervised by <a target="_blank" href="https://lihongyang.info/">Prof. Hongyang Li</a> and <a target="_blank" href="https://repository.hku.hk/cris/rp/rp02460">Prof. Fu Zhang</a>. -->
+            <!-- Prior to this,  -->
+            I earned both my Master's and Bachelor's degrees in Computer Science and Technology from <a target="_blank" href="https://cs.tongji.edu.cn/index.htm">Tongji University</a>, where I had the privilege of being supervised by <a target="_blank" href="http://cs1.tongji.edu.cn/~junqiao/">Prof. Junqiao Zhao</a>.
             <br>
             My research interests focus on general reinforcement learning and its applications in embodied intelligence, i.e. robotic manipulation, humanoid locomotion 🤖.
             I firmly believe that reinforcement learning holds significant promise as a pivotal pathway toward achieving Artificial General Intelligence.
@@ -237,7 +238,7 @@
                   We propose CERTAIN to tackle context ambiguity and OOD issues in one-shot adaptation for COMRL by leveraging uncertainty-aware task representation learning and context collection. 
                   Build upon heteroscedastic-like uncertainty estimation, our method can identify unreliable contexts and then lead to more robust policies.
                   
-                  <br> <a target="_blank" href="">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="">Code</a>
+                  <br> <a target="_blank" href="">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="https://github.com/tiev-tongji/Certain">Code</a>
                   <!-- &nbsp;&nbsp;&bull;&nbsp;&nbsp;
                   <button class="wechatButton">
                   <a target="_blank" href="" class="noNavigateLink">Poster</a>
