--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
           <h1>  <b> Hai </b>  <b> Zhang </b> | <span class="chinese-text"> 张 海 </span></h1>
           <p>
             Hi there!  
-            <!-- I'm an incoming PhD student at <a target="_blank" href="https://mmlab.hk/">The Multimedia Laboratory (MMLab)</a> of <a target="_blank" href="https://www.hku.hk/">The University of Hong Kong</a>, jointly supervised by <a target="_blank" href="https://lihongyang.info/">Prof. Hongyang Li</a> and <a target="_blank" href="https://repository.hku.hk/cris/rp/rp02460">Prof. Fu Zhang</a>. -->
-            <!-- Prior to this,  -->
+            I'm a first-year PhD student at <a target="_blank" href="https://mmlab.hk/">The Multimedia Laboratory (MMLab)</a> of <a target="_blank" href="https://www.hku.hk/">The University of Hong Kong</a>, jointly supervised by <a target="_blank" href="https://lihongyang.info/">Prof. Hongyang Li</a> and <a target="_blank" href="https://repository.hku.hk/cris/rp/rp02460">Prof. Fu Zhang</a>.
+            Prior to this, 
             I earned both my Master's and Bachelor's degrees in Computer Science and Technology from <a target="_blank" href="https://cs.tongji.edu.cn/index.htm">Tongji University</a>, where I had the privilege of being supervised by <a target="_blank" href="http://cs1.tongji.edu.cn/~junqiao/">Prof. Junqiao Zhao</a>.
             <br>
             My research interests focus on general reinforcement learning and its applications in embodied intelligence, i.e. robotic manipulation, humanoid locomotion 🤖.
@@ -129,7 +129,7 @@
             <a target="_blank" href="https://github.com/betray12138" style="color: #000000;"><i style="font-size:20px" class="fa">&#xf09b;</i> Github</a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a target="_blank" href="https://www.zhihu.com/people/betray12138" style="color: #4185F4; font-size:17px"> <img src="images/icon_zhihu.png" alt="", width="3%" /> Zhi Hu</a>&nbsp;&nbsp;&nbsp;&nbsp;
             <a target="_blank" href="https://scholar.google.com/citations?user=YHqAzxUAAAAJ&hl=zh-CN" style="color: #4185F4; font-size:17px"><i class="fa-brands fa-google-scholar"></i> Google Scholar</a>&nbsp;&nbsp;&nbsp;&nbsp;
-            <i class="fa-solid fa-envelope" style="color: #9f9f9f;"></i> zhanghenryhai12138[at]gmail[dot]com
+            <i class="fa-solid fa-envelope" style="color: #9f9f9f;"></i> hai.zhang@connect.hku.hk
             
 
           <br><br>
