--- a/index.html
+++ b/index.html
@@ -231,17 +231,17 @@
                   KineDex collects data over twice as fast as teleoperation across two tasks of varying difficulty, while maintaining a near-100% success rate, compared to under 50% for teleoperation.
                   
                   <br> <a target="_blank" href="https://arxiv.org/abs/2505.01974">Paper</a> &nbsp;&nbsp;&bull;&nbsp;&nbsp; <a target="_blank" href="https://github.com/DinoMini00/KineDex_code">Code</a>
-                  <!-- &nbsp;&nbsp;&bull;&nbsp;&nbsp;
+                  &nbsp;&nbsp;&bull;&nbsp;&nbsp;
                   <button class="wechatButton">
                   <a target="_blank" href="" class="noNavigateLink">Poster</a>
                   <div class="wechatModal">
                     <div class="modal-content">
                         <span class="closeModal" style="cursor: pointer; float: left; font-size: 20px;">&times;</span>
-                        <iframe class="pdfContainer" src="files/RETRO_Poster.pdf#toolbar=0" type="application/pdf" width="1000" height="600" style="border:none;"></iframe>
+                        <iframe class="pdfContainer" src="https://ik.imagekit.io/xxyvnpkee/CORL_2025_KineDex_Poster.pdf?updatedAt=1759478415435#toolbar=0" type="application/pdf" width="1000" height="600" style="border:none;"></iframe>
                         <div class="errorMessage">Unable to display the PDF. Please try again later.</div>
                     </div>
                   </div>
-                  </button> -->
+                  </button>
                   &nbsp;&nbsp;&bull;&nbsp;&nbsp;<a target="_blank" href="https://dinomini00.github.io/KineDex/">Website</a>
             </p>
           </div>
@@ -474,6 +474,18 @@
         </div>
 
       </div>
+
+      <div>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr onmouseout="blocknerf_stop()" onmouseover="blocknerf_start()">
+            <td style="padding:10px;width:40%;max-width:40%;vertical-align:middle">          
+              <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=b1MWjssroQuI7Qnl_jHFfFyN6qvBv7ok5qMlXjfuM24'></script>
+            </td>
+          </tr>
+        </tbody></table>
+      </div>
+
+      <br> <br> <br>
 
       <!-- Footer and other elements -->
       <div id="footer">Website template adapted from <a href="https://github.com/andyzeng/andyzeng.github.io">Andy Zeng</a> and <a href="https://jonbarron.info/">Jon Barron</a>.</div>
