--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
             <p>
                 Di Zhang, Chengbo Yuan, Chuan Wen, <u>Hai Zhang</u>, Junqiao Zhao, Yang Gao†
                 <font color="49bf9"><br><i>Conference on Robot Learning (CORL) 2025</i><br> </font>
+                <font color="orange"><i>&#9733; Spotlight Presentation &#9733;</i></font><br>
               
                 <font color="769fcd"> <i class="fa-solid fa-magnifying-glass"></i> TL;DR: 
                   We propose KineDex, a hand-over-hand kinesthetic teaching paradigm in which the operator's motion is directly transferred to the dexterous hand, 
@@ -320,7 +321,7 @@
                   <div class="wechatModal">
                     <div class="modal-content">
                         <span class="closeModal" style="cursor: pointer; float: left; font-size: 20px;">&times;</span>
-                        <iframe class="pdfContainer" src="https://ik.imagekit.io/xxyvnpkee/USB_PO_Poster.pdf?updatedAt=1755411081171#toolbar=0" type="application/pdf" width="1000" height="600" style="border:none;"></iframe>
+                        <iframe class="pdfContainer" src="https://ik.imagekit.io/xxyvnpkee/unicorn_Poster.pdf?updatedAt=1755411078789#toolbar=0" type="application/pdf" width="1000" height="600" style="border:none;"></iframe>
                         <div class="errorMessage">Unable to display the PDF. Please try again later.</div>
                     </div>
                   </div>
