--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
                   </div>
                   </button>
                   &nbsp;&nbsp;&bull;&nbsp;&nbsp;<a target="_blank" href="https://dinomini00.github.io/KineDex/">Website</a>
+                  &nbsp;&nbsp;&bull;&nbsp;&nbsp;<a target="_blank" href="https://mp.weixin.qq.com/s/pTcP2vCYGVIHww4FpZ0n_w">Overview</a>
             </p>
           </div>
         </div>
@@ -470,7 +471,7 @@
 
         <!-- CV -->
         <div class="list-item cv" data-category="cv">
-          <iframe class="pdfContainer" src="https://ik.imagekit.io/xxyvnpkee/cv.pdf?updatedAt=1755414987169#toolbar=0" width="900" height="1170" style="border:none;"></iframe>
+          <iframe class="pdfContainer" src="https://ik.imagekit.io/xxyvnpkee/cv.pdf?updatedAt=1760885441148#toolbar=0" width="900" height="1170" style="border:none;"></iframe>
           <div class="errorMessage">Unable to display the PDF. Please try again later.</div>
         </div>
 
