--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
       <!-- Intro section remains the same -->
       <div id="intro">
         <div id="intro-image">
-          <img src="https://ik.imagekit.io/xxyvnpkee/profile.jpg?updatedAt=1755411235077">
+          <img src="https://ik.imagekit.io/xxyvnpkee/profile1.png?updatedAt=1761496559417">
         </div>
         <div id="intro-text">
           <h1>  <b> Hai </b>  <b> Zhang </b> | <span class="chinese-text"> 张 海 </span></h1>
           <p>
             Hi there!  
             I'm a first-year PhD student at <a target="_blank" href="https://mmlab.hk/">The Multimedia Laboratory (MMLab)</a> of <a target="_blank" href="https://www.hku.hk/">The University of Hong Kong</a>, jointly supervised by <a target="_blank" href="https://lihongyang.info/">Prof. Hongyang Li</a> and <a target="_blank" href="https://repository.hku.hk/cris/rp/rp02460">Prof. Fu Zhang</a>.
-            Prior to this, 
-            I earned both my Master's and Bachelor's degrees in Computer Science and Technology from <a target="_blank" href="https://cs.tongji.edu.cn/index.htm">Tongji University</a>, where I had the privilege of being supervised by <a target="_blank" href="http://cs1.tongji.edu.cn/~junqiao/">Prof. Junqiao Zhao</a>.
+            I also serve as the head TA for the newly launched undergraduate course <a target="_blank" href="https://mmlab.hk/CCAI9025">CCAI9025</a>.
+            Prior to this, I earned both my Master's and Bachelor's degrees in Computer Science and Technology from <a target="_blank" href="https://cs.tongji.edu.cn/index.htm">Tongji University</a>, where I had the privilege of being supervised by <a target="_blank" href="http://cs1.tongji.edu.cn/~junqiao/">Prof. Junqiao Zhao</a>.
             <br>
-            My research interests focus on general reinforcement learning and its applications in embodied intelligence, i.e. robotic manipulation, humanoid locomotion 🤖.
+            My research interests focus on general reinforcement learning and its applications in embodied intelligence, i.e. robotic manipulation, vision-language navigation 🤖.
             I firmly believe that reinforcement learning holds significant promise as a pivotal pathway toward achieving Artificial General Intelligence.
             <br>
             Previously, I was fortunate to collaborate with <a target="_blank" href="https://lanqingli1993.github.io/">Prof. Lanqing Li</a> and <a target="_blank" href="https://www.cse.cuhk.edu.hk/~pheng/">Prof. Pheng Ann Heng</a> at The Chinese University of Hong Kong.
