add new experience

--- a/index.html
+++ b/index.html
@@ -122,6 +122,29 @@
       <div class="grid">
         <!-- Experience -->
         <div class="list-item experience" data-category="experience">
+
+          <!-- 新增的第一个block -->
+          <p>
+            <img src="https://ik.imagekit.io/xxyvnpkee/noah.png?updatedAt=1762267160843" 
+              style="float: right; margin-right: 20px; ; width: 280px; height: 70px;">
+          </p>
+          <ul style="margin:0 0 20px;list-style-type:none;">
+            <li>
+              <autocolor>Time: 2025.10~current</autocolor>
+            </li>
+            <div style="height: 20px;"></div>
+            <li>
+              <autocolor>Research Topic: Large Scale VLN Model</autocolor>
+            </li>
+            <div style="height: 20px;"></div>
+            <!-- <li>
+              <autocolor>Supervisor: <a target="_blank" href="https://people.iiis.tsinghua.edu.cn/~gaoyang/yang-gao.weebly.com/index.html">Prof. Yang Gao</a></autocolor>
+            </li> -->
+          </ul>     
+  
+          <div style="height: 80px;"></div>
+
+          <!-- 原有的第一个block -->
           <p>
             <img src="https://ik.imagekit.io/xxyvnpkee/iiis.png?updatedAt=1755411231874" 
               style="float: right; margin-right: 20px; ; width: 280px; height: 120px;">
@@ -130,7 +153,7 @@
           </p>
           <ul style="margin:0 0 20px;list-style-type:none;">
             <li>
-              <autocolor>Research Intern, 2024.06~current</autocolor>
+              <autocolor>Time: 2024.06~current</autocolor>
             </li>
             <div style="height: 20px;"></div>
             <li>
@@ -144,6 +167,7 @@
   
           <div style="height: 80px;"></div>
           
+          <!-- 原有的第二个block -->
           <p>
             <img src="https://ik.imagekit.io/xxyvnpkee/cuhk.png?updatedAt=1755411231262" 
               style="float: right; margin-right: 20px; ; width: 300px; height: 60px;">
@@ -152,7 +176,7 @@
           </p>
           <ul style="margin:0 0 20px;list-style-type:none;">
             <li>
-              <autocolor>Research Intern, 2023.07~2024.05</autocolor>
+              <autocolor>Time: 2023.07~2024.05</autocolor>
             </li>
             <div style="height: 20px;"></div>
             <li>
