--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <!-- Intro section remains the same -->
       <div id="intro">
         <div id="intro-image">
-          <img src="https://ik.imagekit.io/xxyvnpkee/profile1.png?updatedAt=1761496559417">
+          <img src="https://ik.imagekit.io/xxyvnpkee/profile.jpg">
         </div>
         <div id="intro-text">
           <h1>  <b> Hai </b>  <b> Zhang </b> | <span class="chinese-text"> 张 海 </span></h1>
@@ -130,7 +130,7 @@
           </p>
           <ul style="margin:0 0 20px;list-style-type:none;">
             <li>
-              <autocolor>Time: 2025.10~current</autocolor>
+              <autocolor>Time: 2025.12~current</autocolor>
             </li>
             <div style="height: 20px;"></div>
             <li>
